--- a/css/evenementen.css
+++ b/css/evenementen.css
@@ -39,13 +39,15 @@ Body{
 }
 
 .maps-img{
+  position: absolute;
   margin-top: -5200px;
-  margin-left: 1200px;
+  margin-left: 1000px;
   height: 500px;
   width: 500px;
   border-style: solid;
   border-color: white;
 }
+
 
 .drake-img{
   margin-top: -90px;
@@ -164,16 +166,16 @@ a:hover{
   }
   
   .drake-tekst{
-    height: 0px;
-    margin-left: 140px;
-    margin-top: -90px;
+    position: absolute;
+    top: 800px;
+    left: 100px;
     font-size: 20px;
     color: white;
   }
   
   .info-tekst{
     margin-left: -5px;
-    margin-top: -400px;
+    margin-top: 0px;
     font-size: 5.8px;
     color: white;
   }
